--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -1,22 +1,28 @@
 .site-header {
   background-color: $gym-black;
+  display: flex;
+  flex-direction: column;
 
   ul {
     list-style: none;
     margin: 0;
     padding: 0;
   }
+}
 
-  @include breakpoint(700px, min) {
-    display: flex;
-    flex-direction: column;
-  }
+.site-logo {
+  padding: 1rem 0;
+  display: inline-block;
 }
 
 .main-nav {
   padding: 1rem 0 0;
 
   ul {
+    position: relative;
+    left: -1.5rem;
+    width: calc(100% + 3rem);
+
     a:not(.gym-button) {
       font-family: $gym-font-stack;
       font-size: 1.2em;
@@ -29,27 +35,40 @@
       }
     }
   }
+}
 
-  @include breakpoint(700px, max) {
-    .site-logo {
-      padding: 1rem 0;
-      display: inline-block;
-    }
-
-    // This is the line below the logo on mobile screens
+@include breakpoint(320px, max) {
+  .main-nav {
     ul {
       margin-top: 1rem;
-      position: relative;
-  
+
       &::before {
         content: '';
         position: absolute;
         top: 0;
-        left: -1.5rem;
-        width: calc(100% + 3rem);
-        border-top: 1px solid $gym-white;
+        width: 100%;
+        border-top: 1px solid $gym-light-gray;
         z-index: 1;
       }
+
+      a {
+        &:not(.gym-button) {
+          border-bottom: 1px solid $gym-light-gray;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width:320px) and (max-width: 639px){
+  .main-nav {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      flex-grow: 1;
+      justify-content: space-between;
+      padding-bottom: 1.5rem;
 
       a {
         &.gym-button {
@@ -57,8 +76,6 @@
         }
 
         &:not(.gym-button) {
-          border-bottom: 1px solid $gym-white;
-
           &:hover {
             background-color: rgba($gym-dark-gray-2, 0.75);
           }
@@ -67,13 +84,16 @@
     }
 
     li {
-      position: relative;
-      left: -15px;
-      width: calc(100% + 3rem);
+
+      &:last-child {
+        flex-basis: 100%;
+      }
     }
   }
+}
 
-  @include breakpoint(700px, min) {
+@include breakpoint(small, min) {
+  .main-nav {
     padding: 1rem 0;
     display: flex;
     order: 3;
@@ -88,6 +108,7 @@
 
     .site-logo {
       flex-basis: content;
+      flex-shrink: 0;
     }
 
     ul {
@@ -97,6 +118,8 @@
       flex-grow: 1;
       min-width: 50%;
       justify-content: flex-end;
+      width: unset;
+      left: unset;
 
       a:not(.gym-button) {
       
@@ -108,6 +131,7 @@
 
     li {
       display: inline-flex;
+      width: auto;
     }
   }
 }
@@ -124,8 +148,10 @@
     padding: 1rem 0;
     margin-left: 1rem;
   }
+}
 
-  @include breakpoint(700px, min) {
+@include breakpoint(small, min) {
+  .utility-nav {
     display: flex;
     order: 2;
     padding: 1rem 0;
@@ -138,4 +164,3 @@
     }
   }
 }
-
