--- a/_includes/modules/jobs.html
+++ b/_includes/modules/jobs.html
@@ -93,5 +93,9 @@
     <h4>Ooops!</h4>
     <p>The hamsters running this wheel were conspicuously absent. As a result, your request fell on deaf ears. Please try again later.</p>
   </div>
+  <div id="error-unknown" class="hide">
+    <h4>Ooops!</h4>
+    <p>We were unable to retrieve jobs because of an unknown error. Please try again later.</p>
+  </div>
 </div>
 <div id="jobs-container" class="jobs-container {{jobs_module_class}}" data-options="heading:{{opt_heading}};category:{{opt_category | downcase}};limit:{{opt_limit}};" data-endpoint="{{jobs_endpoint}}" data-fallback="{{jobs_fallback}}"></div><!-- #jobs-container.jobs-container.{{jobs_module_class}} -->
