--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -45,11 +45,20 @@
 
       <header class="site-header" aria-label="Site Header">
 
+        <nav id="utility-nav" class="utility-nav" aria-label="Affiliated Brands Navigation">
+          <div class="container">
+            <ul>
+              <li><a href="https://aquent.com" rel="noopener" target="_blank" title="Aquent" class="gym-nav-icon-container"> <i class="gym-nav-icon aquent-icon"></i></a></li>
+              <li><a href="https://vitamintalent.com" rel="noopener" target="_blank" title="Vitamin T" class="gym-nav-icon-container"> <i class="gym-nav-icon vitamin-t-icon"></i></a></li>
+            </ul>
+          </div>
+        </nav>
+
         <nav id="main-nav" class="main-nav" aria-label="Main Navigation">
           <div class="container">
 
             <a class="site-logo" href="/">
-              <img class="gymnasium-logo" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" alt="Aquent Gymnasium home page">
+              <img class="gymnasium-logo" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" alt="Aquent Gymnasium home page" decoding="async">
             </a>
 
             {%- assign menuclass = "logged-out" -%}
@@ -65,20 +74,12 @@
               <li><a href="/about">About</a></li>
 
               {%- if page.permalink == '/home/index-auth/' -%}
-                <li><a class="{{dashclass}}" href="/dashboard">Dashboard</a></li>
+                <li><a href="/dashboard">Dashboard</a></li>
                 <li><a href="/logout">Log Out</a></li>
               {%- else -%}
-                <li><a class="{{dashclass}}" href="/dashboard">Log In / Sign Up</a></li>
+                <li><a href="/login?dashboard">Sign In</a></li>
+                <li><a class="{{dashclass}}" href="/register">Sign Up</a></li>
               {%- endif -%}
-            </ul>
-          </div>
-        </nav>
-
-        <nav id="utility-nav" class="utility-nav" aria-label="Affiliated Brands Navigation">
-          <div class="container">
-            <ul>
-              <li><a href="https://aquent.com" rel="noopener" target="_blank" title="Aquent" class="gym-nav-icon-container"> <i class="gym-nav-icon aquent-icon"></i></a></li>
-              <li><a href="https://vitamintalent.com" rel="noopener" target="_blank" title="Vitamin T" class="gym-nav-icon-container"> <i class="gym-nav-icon vitamin-t-icon"></i></a></li>
             </ul>
           </div>
         </nav>
