--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -68,7 +68,7 @@
               {%- assign dashclass = "" -%}
             {%- endif -%}
 
-            <ul class="{{menuclass}}">
+            <ul class="{{menuclass}}" role="list">
               <li><a href="/courses">Courses</a></li>
               <li><a href="/jobs">Jobs</a></li>
               <li><a href="/about">About</a></li>
