--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -1,7 +1,5 @@
 .site-header {
   background-color: $gym-black;
-//   display: flex;
-//   flex-direction: column;
 
   ul {
     list-style: none;
@@ -26,6 +24,7 @@
       font-size: 1.2em;
       line-height: 1.5;
       color: $gym-white;
+      letter-spacing: 1px; // Breathe, thank-you!
       padding: 1.2rem;
       border-top: 1px solid $gym-dark-gray;
       transition: all 250ms ease;
@@ -41,7 +40,7 @@
 
   }
 
-  @include breakpoint(42em, min) {
+  @include breakpoint(44em, min) {
 
     & {
       padding: 1.2rem 0;
@@ -49,7 +48,7 @@
 
     .site-logo {
       display: inline-block;
-      vertical-align: -1.4rem;
+      line-height: 47px; // 2× (ish) logo height
     }
 
     ul {
@@ -69,18 +68,67 @@
           width: auto;
         }
 
-         a[href*="about"]:after {
+        a[href*="about"]:after {
           content: "";
           padding: 1.2rem 0;
           border-left: 1px solid $gym-dark-gray;
-          margin-left: 2.4rem;
+          margin-left: 2.7rem; // Plus 0.3rem; Mimic inline-block letter-spacing
+          margin-right: 0.3rem; // Mimic inline-block letter-spacing
         }
 
         &:last-child {
           padding-top: 0;
-          margin-left: 0.8rem;
+          margin-left: 1rem;
         }
 
+      }
+
+    }
+
+    @supports (display: grid) {
+
+      & {
+        display: grid;
+
+        & > .container {
+          width: 100%;
+
+          &,
+          ul {
+            display: inherit;
+            grid-auto-flow: column;
+            align-items: center;
+          }
+
+          &::before,
+          &::after {
+            content: none;
+          }
+
+          .site-logo {
+            line-height: initial;
+          }
+
+          ul,
+          li:last-child {
+            padding-top: 0;
+          }
+
+          ul {
+            grid-gap: 0.3rem; // Mimic inline-block letter-spacing
+            justify-content: end;
+
+            a {
+              border-top: 0 none;
+            }
+
+            a[href*="about"]:after {
+              margin-right: 0;
+            }
+
+          }
+
+        }
       }
 
     }
@@ -88,168 +136,6 @@
   }
 
 }
-
-// .main-nav {
-//   position: relative;
-//   padding: 1rem 0;
-//
-// .site-logo {
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   height: 25px;
-//   margin: auto 0;
-// }
-//
-//   ul {
-//     float: right;
-//     margin-left: 16em;
-//   }
-//
-//   ul li {
-//     display: inline;
-//   }
-//
-//   li a:not(.gym-button) {
-//     display: inline-block;
-//   }
-//
-//   li a.gym-button {
-//     width: auto;
-//     vertical-align: middle;
-//   }
-//
-// .vbar {
-//   border-right: 1px solid $gym-dark-gray;
-// }
-//
-// }
-
-// .main-nav {
-//   padding: 1rem 0 0;
-//
-//   ul {
-//     position: relative;
-//     left: -1.5rem;
-//     width: calc(100% + 3rem);
-//
-//     a:not(.gym-button) {
-//       font-family: $gym-font-stack;
-//       font-size: 1.2em;
-//       color: $gym-white;
-//       padding: 1.5rem;
-//       display: block;
-//
-//       &:hover {
-//         transition: all 250ms ease;
-//       }
-//     }
-//   }
-// }
-//
-// @include breakpoint(320px, max) {
-//   .main-nav {
-//     ul {
-//       margin-top: 1rem;
-//
-//       &::before {
-//         content: '';
-//         position: absolute;
-//         top: 0;
-//         width: 100%;
-//         border-top: 1px solid $gym-light-gray;
-//         z-index: 1;
-//       }
-//
-//       a {
-//         &:not(.gym-button) {
-//           border-bottom: 1px solid $gym-light-gray;
-//         }
-//       }
-//     }
-//   }
-// }
-//
-// @media (min-width:320px) and (max-width: 639px){
-//   .main-nav {
-//     ul {
-//       display: flex;
-//       flex-wrap: wrap;
-//       align-items: center;
-//       flex-grow: 1;
-//       justify-content: space-between;
-//
-//       // make the gym button fill the space
-//       // note: the following classes are available on the ul: ul.logged-in & ul.logged-out
-//       &.logged-out {
-//         padding-bottom: 1.5rem;
-//
-//         li {
-//
-//           &:last-child {
-//             flex-basis: 100%;
-//           }
-//         }
-//       }
-//
-//       a {
-//         &.gym-button {
-//           border-radius: 0;
-//         }
-//
-//         &:not(.gym-button) {
-//           &:hover {
-//             background-color: rgba($gym-dark-gray-2, 0.75);
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-//
-// @include breakpoint(small, min) {
-//   .main-nav {
-//     padding: 1rem 0;
-//     display: flex;
-//     order: 3; // this is if we decide to include the system status banner within .site-header
-//     height: 7rem;
-//
-//     .container {
-//       display: flex;
-//       align-items: center;
-//       justify-content: space-between;
-//       width: 100%;
-//     }
-//
-//     .site-logo {
-//       flex-basis: content;
-//       flex-shrink: 0;
-//     }
-//
-//     ul {
-//       border: 0;
-//       min-width: 50%;
-//       display: flex;
-//       flex-grow: 1;
-//       align-items: center;
-//       justify-content: flex-end;
-//       width: unset;
-//       left: unset;
-//
-//       a:not(.gym-button) {
-//
-//         &:hover {
-//           color: $gym-orange;
-//         }
-//       }
-//     }
-//
-//     li {
-//       display: inline-flex;
-//       width: auto;
-//     }
-//   }
-// }
 
 .utility-nav {
   background-color: black;
@@ -273,8 +159,8 @@
 
     .container {
       display: flex;
-      align-items: center;
       width: 100%;
+      align-items: center;
       justify-content: flex-end;
     }
   }
