--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -71,7 +71,7 @@
             <ul class="{{menuclass}}" role="list">
               <li><a href="/courses">Courses</a></li>
               <li><a href="/jobs">Jobs</a></li>
-              <li><a href="/about">About</a></li>
+              <li class="vbar"><a href="/about">About</a></li>
 
               {%- if page.permalink == '/home/index-auth/' -%}
                 <li><a href="/dashboard">Dashboard</a></li>
