Update nav layout
- Update breakpoint width
- Update spacing

--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -33,13 +33,12 @@
   }
 
   ul {
-    padding-top: 1.75rem;
+    padding-top: 1.5rem;
 
     a {
       display: block;
       font-family: $gym-font-stack;
       font-size: 1.2em;
-      line-height: 1.5;
       color: $gym-white;
       letter-spacing: 1px; // Readability, thank-you!
       padding: 1.2rem 1.5rem;
@@ -52,12 +51,19 @@
     }
 
     li:last-child {
-      padding-top: 0.5ex; // Add visual spacing (for descender)
+
+      a[class] {
+        margin-top: 0.5ex; // Add visual spacing (for descender)
+      }
+
+      a:not([class]) {
+        margin-bottom: -1rem; // Remove spacing when not a button
+      }
     }
 
   }
 
-  @include breakpoint(45em, min) {
+  @include breakpoint(48em, min) {
 
     & {
       padding: 1.2rem 0;
@@ -88,14 +94,16 @@
         }
 
         &:last-child {
-          padding-top: 0;
 
           a[class] {
+            margin-top: 0;
             margin-left: 1.4375rem; // Rounding (text width)
           }
 
           a:not([class]) {
-            margin-left: -0.25ex; // Adjust word-spacing
+            margin-left: -0.5ex; // Adjust word-spacing
+            // margin-right: -1.5rem; // Flush to edge
+            margin-bottom: 0;
           }
         }
       }
@@ -158,7 +166,7 @@
   }
 }
 
-@include breakpoint(45em, min) {
+@include breakpoint(48em, min) {
   .utility-nav {
     display: flex;
     // order: 2; // this is if we decide to include the system status banner within .site-header
