Update utility nav
- Update spacing
- Update logos folder name
- Update Aquent logo
- Add Aquent Talent logo
- Remove Vitamin Talent logos

--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -47,9 +47,9 @@
 
         <nav id="utility-nav" class="utility-nav" aria-label="Affiliated Brands Navigation">
           <div class="container">
-            <ul>
-              <li><a href="https://aquent.com" rel="noopener" target="_blank" title="Aquent" class="gym-nav-icon-container"> <i class="gym-nav-icon aquent-icon"></i></a></li>
-              <li><a href="https://vitamintalent.com" rel="noopener" target="_blank" title="Vitamin T" class="gym-nav-icon-container"> <i class="gym-nav-icon vitamin-t-icon"></i></a></li>
+            <ul role="list">
+              <li><a href="https://aquent.com" class="grayscale" rel="noopener" target="_blank" title="Aquent"><img class="icon-aq" alt="Aquent icon." src="/img/gym-aquent-logos/png/aquent-a-logo-orange.png" srcset="/img/gym-aquent-logos/svg/aquent-a-logo-orange.svg" width="23" height="25" decoding="async" fetchpriority="high"></a></li>
+              <li><a href="https://aquenttalent.com" class="grayscale opacity" rel="noopener" target="_blank" title="Aquent Talent"><img class="icon-aq-talent" alt="Aquent Talent icon." src="/img/gym-aquent-logos/png/aquent-talent-t-logo-white.png" srcset="/img/gym-aquent-logos/svg/aquent-talent-t-logo-white.svg" width="26" height="29" decoding="async" fetchpriority="high"></a></li>
             </ul>
           </div>
         </nav>
@@ -58,7 +58,7 @@
           <div class="container">
 
             <a class="site-logo" href="/">
-              <img class="gymnasium-logo" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" alt="Aquent Gymnasium home page" decoding="async">
+              <img class="gymnasium-logo" alt="Aquent Gymnasium homepage" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" decoding="async" fetchpriority="high">
             </a>
 
             {%- assign menuclass = "logged-out" -%}
