Update navigation markup and style
- Update utility nav layout (grid layout and fallback)
- Update utility nav icon arial-label and alt text
- Remove utility nav link title attribute
- Update comments
- Update nesting
- Update formatting

--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -48,8 +48,16 @@
         <nav id="utility-nav" class="utility-nav" aria-label="Affiliated Brands Navigation">
           <div class="container">
             <ul role="list">
-              <li><a href="https://aquent.com" class="grayscale" rel="noopener" target="_blank" title="Aquent"><img class="icon-aq" alt="Aquent icon." src="/img/gym-aquent-logos/png/aquent-a-logo-orange.png" srcset="/img/gym-aquent-logos/svg/aquent-a-logo-orange.svg" width="23" height="25" decoding="async" fetchpriority="high"></a></li>
-              <li><a href="https://aquenttalent.com" class="grayscale opacity" rel="noopener" target="_blank" title="Aquent Talent"><img class="icon-aq-talent" alt="Aquent Talent icon." src="/img/gym-aquent-logos/png/aquent-talent-t-logo-white.png" srcset="/img/gym-aquent-logos/svg/aquent-talent-t-logo-white.svg" width="26" height="29" decoding="async" fetchpriority="high"></a></li>
+              <li>
+                <a href="https://aquent.com" class="grayscale" rel="noopener" target="_blank" aria-label="Aquent website.">
+                  <img class="icon-aquent" alt="Aquent “A” logo." src="/img/gym-aquent-logos/png/aquent-a-logo-orange.png" srcset="/img/gym-aquent-logos/svg/aquent-a-logo-orange.svg" width="23" height="25" decoding="async" fetchpriority="high">
+                </a>
+              </li>
+              <li>
+                <a href="https://aquenttalent.com" class="grayscale opacity" rel="noopener" target="_blank" aria-label="Aquent Talent website.">
+                  <img class="icon-aquent-talent" alt="Aquent Talent “T” (inside a teardrop) logo." src="/img/gym-aquent-logos/png/aquent-talent-t-logo-white.png" srcset="/img/gym-aquent-logos/svg/aquent-talent-t-logo-white.svg" width="26" height="29" decoding="async" fetchpriority="high">
+                </a>
+              </li>
             </ul>
           </div>
         </nav>
