Update utility nav
- Remove punctuation from aria-label text
- Add site.url varialble to image path

--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -49,13 +49,13 @@
           <div class="container">
             <ul role="list">
               <li>
-                <a href="https://aquent.com" class="grayscale" rel="noopener" target="_blank" aria-label="Aquent website.">
-                  <img class="icon-aquent" alt="Aquent “A” logo." src="/img/gym-aq-vt-logos/png/aquent-a-logo-orange.png" srcset="/img/gym-aq-vt-logos/svg/aquent-a-logo-orange.svg" width="23" height="25" decoding="async" fetchpriority="high">
+                <a href="https://aquent.com" class="grayscale" rel="noopener" target="_blank" aria-label="Aquent website">
+                  <img class="icon-aquent" alt="Aquent “A” logo." src="{{site.url}}/img/gym-aq-vt-logos/png/aquent-a-logo-orange.png" srcset="{{site.url}}/img/gym-aq-vt-logos/svg/aquent-a-logo-orange.svg" width="23" height="25" decoding="async" fetchpriority="high">
                 </a>
               </li>
               <li>
-                <a href="https://aquenttalent.com" class="grayscale opacity" rel="noopener" target="_blank" aria-label="Aquent Talent website.">
-                  <img class="icon-aquent-talent" alt="Aquent Talent “T” (inside a teardrop) logo." src="/img/gym-aq-vt-logos/png/aquent-talent-t-logo-white.png" srcset="/img/gym-aq-vt-logos/svg/aquent-talent-t-logo-white.svg" width="26" height="29" decoding="async" fetchpriority="high">
+                <a href="https://aquenttalent.com" class="grayscale opacity" rel="noopener" target="_blank" aria-label="Aquent Talent website">
+                  <img class="icon-aquent-talent" alt="Aquent Talent “T” (inside a teardrop) logo." src="{{site.url}}/img/gym-aq-vt-logos/png/aquent-talent-t-logo-white.png" srcset="{{site.url}}/img/gym-aq-vt-logos/svg/aquent-talent-t-logo-white.svg" width="26" height="29" decoding="async" fetchpriority="high">
                 </a>
               </li>
             </ul>
