--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -1930,3 +1930,108 @@ section.discussion::after {
 .fa-filter:before {
   content: "\f0b0";
 }
+
+// Workshops forum styling fixes
+
+.forum-nav-thread.never-read .forum-nav-thread-link {
+  border-color: $gym-orange;
+
+  .icon {
+    color: $gym-orange;
+  }
+}
+
+#course-content {
+  font-size: 16px;
+
+  :link, :visited, :hover, :focus {
+    color: currentColor;
+  }
+
+  .btn-link {
+    font: inherit;
+    color: currentColor;
+  }
+
+  .xmodule_HtmlModule {
+    *:not(h1, h2, h3, h4, h5, h6) {
+      font-family: $gym-text-font-stack;
+      font-size: 1em;
+      color: #222;
+    }
+
+    h1 {
+      font: 900 2.25em/1.2 $gym-font-stack;
+      letter-spacing: 0.04em;
+      word-spacing: 0.05em;
+      text-transform: uppercase;
+      margin-bottom: 0 !important;
+    }
+
+    h2 {
+      font: 900 1.8em/1.3 $gym-font-stack;
+      letter-spacing: 0.04em;
+      word-spacing: 0.05em;
+      text-transform: uppercase;
+    }
+
+    h3 {
+      font: 900 1.2em/1.3 $gym-font-stack;
+      letter-spacing: 0.04em;
+      word-spacing: 0.05em;
+      text-transform: uppercase;
+    }
+
+    h4 {
+      font: 900 1em/1.3 $gym-font-stack;
+      text-transform: none;
+    }
+
+    h5, h6 {
+      text-transform: none;
+    }
+
+    > * {
+      margin-top: 0;
+    }
+
+    * + * {
+      margin-top: 1rem;
+      margin-bottom: 0;
+    }
+  }
+
+  .discussion-module .add_post_btn_container {
+    position: relative;
+    top: -1.6em;
+  }
+
+  .add_post_btn_container .btn-link {
+    font-weight: bold;
+
+    &:hover,
+    &:focus {
+      margin-bottom: 2px;
+    }
+  }
+
+  .discussion-module {
+    button.discussion-show {
+      display: none;
+    }
+
+    .discussion-module-title {
+      font-size: 1.4em;
+      font-weight: 900;
+    }
+
+    .inline-discussion-topic, .forum-nav-thread-title, .thread-preview-body {
+      font-family: "Helvetica Neue", sans-serif;
+      font-size: 1em;
+    }
+
+    .forum-nav-thread-title {
+      font-weight: bold;
+    }
+  }
+}
