--- a/_includes/partials/meta/logic-take5.html
+++ b/_includes/partials/meta/logic-take5.html
@@ -3,6 +3,7 @@ Set up meta tags for a Take 5 meta include
 {%- endcomment -%}
 {%- assign course = site.data.take5[id] -%}
 {%- assign og_description = course.short_description -%}
+{%- assign og_title = course.title -%}
 {%- assign og_url = course.title | slugify | prepend: "/courses/take5/" -%}
 {%- assign page_title = "Take 5 | Gymnasium" -%}
 {%- assign og_art = course.course_ID | downcase | append: "-og.png" | prepend: "/img/take5/og/" -%}
