Update forum styling
- Update nesting

--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -1950,6 +1950,7 @@ section.discussion::after {
     &:hover,
     &:focus {
       font: bold 1.2em/1 $gym-font-stack;
+    }
   }
 
   button.btn-link,
